Did UI for regional stats

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,28 +13,45 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.fileprovider"
-            android:grantUriPermissions="true"
-            android:exported="false">
+            android:exported="false"
+            android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/provider_paths" />
         </provider>
+
         <service
             android:name=".services.DownloadManagerIntentService"
-            android:exported="false"/>
+            android:exported="false" />
 
         <activity
             android:name=".ui.landing.MainActivity"
             android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".ui.preventionTips.PreventionTipsActivity"
+            android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
+
+
+
+        </activity>
+        <activity
+            android:name=".ui.regionalStats.RegionalStatsActivity"
+            android:label="@string/app_name">
+
             <intent-filter>
+
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter>   
+
         </activity>
     </application>
 
