Added UiState and SwipeRefreshLayout to monitor and initiate updateCasesData

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,5 +76,7 @@ dependencies {
     //Local Libs
     implementation project(':remote')
     implementation project(':local')
+    
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
 
 }
