put finishing touches to regional cases UI and  State Cases UI

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,19 +44,23 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.regionalStats.RegionalStatsActivity"
-            android:theme="@style/AppTheme">
-
-        </activity>
-
-        <activity android:name=".ui.regionalStats.StateStatsActivity"
-            android:theme="@style/AppTheme" >
-
-
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity android:name=".ui.regionalStats.StateStatsActivity"
+            android:theme="@style/AppTheme.NoActionBar" >
+
+
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
         </activity>
     </application>
 
