--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,8 @@ dependencies {
     implementation project(':remote')
     implementation project(':local')
 
+    def room_version = "2.2.5"
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
+    kapt "androidx.room:room-compiler:$room_version"
 
 }
