--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,9 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY"/>
+    <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
 
     <application
         android:name=".Application"
@@ -14,7 +16,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.about.AboutActivity"></activity>
+        <activity android:name=".ui.about.AboutActivity" />
         <activity
             android:name=".ui.screeningTool.ScreeningToolActivity"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -45,14 +47,14 @@
         <activity
             android:name=".ui.landing.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.preventionTips.PreventionTipsActivity"
             android:theme="@style/AppTheme.NoActionBar" />
 
         <receiver android:name=".broadcastReceivers.WashHandsReminderBroadcast" />
-
         <receiver android:name=".broadcastReceivers.DrinkWaterReminderBroadcast" />
+        <receiver android:name=".broadcastReceivers.GeofenceBroadcastReceiver"/>
 
     </application>
 
