--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,19 +16,29 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.about.AboutActivity" />
-        <activity android:name=".ui.landing.sortedDetailsData.SortedDetailsDataActivity"
-            android:theme="@style/AppTheme.NoActionBar">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
 
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
+        <service
+            android:name=".services.MyFirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
+        <activity android:name=".ui.about.AboutActivity" />
+        <activity
+            android:name=".ui.landing.sortedDetailsData.SortedDetailsDataActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
         </activity>
         <activity
             android:name=".ui.screeningTool.ScreeningToolActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
-
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.splashscreen.SplashScreenActivity"
             android:theme="@style/AppTheme.NoActionBar">
@@ -63,14 +73,11 @@
 
         <receiver android:name=".broadcastReceivers.WashHandsReminderBroadcast" />
         <receiver android:name=".broadcastReceivers.DrinkWaterReminderBroadcast" />
-        <receiver android:name=".broadcastReceivers.GeofenceBroadcastReceiver"/>
+        <receiver android:name=".broadcastReceivers.GeofenceBroadcastReceiver" />
 
         <activity
             android:name=".ui.regionalStats.RegionalStatsActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
-
-
-
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
