--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,4 +86,5 @@ dependencies {
 
     implementation 'com.google.android.libraries.places:places:2.3.0'
 
+    implementation 'com.google.firebase:firebase-analytics:17.4.2'
 }
