--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+    <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES"/>
 
     <application
         android:name=".Application"
@@ -15,7 +16,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme.NoActionBar"
+        android:usesCleartextTraffic="true">
 
         <service
             android:name=".services.MyFirebaseMessagingService">
@@ -24,24 +26,15 @@
             </intent-filter>
         </service>
 
-        <activity android:name=".ui.about.AboutActivity" />
         <activity
-            android:name=".ui.landing.sortedDetailsData.SortedDetailsDataActivity"
-            android:theme="@style/AppTheme.NoActionBar">
-
-            <!-- <intent-filter> -->
-            <!-- <action android:name="android.intent.action.MAIN" /> -->
-
-
-            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
-            <!-- </intent-filter> -->
-        </activity>
+            android:name=".ui.about.AboutActivity"
+            android:parentActivityName=".ui.landing.MainActivity"/>
         <activity
-            android:name=".ui.screeningTool.ScreeningToolActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:name=".ui.landing.sortedDetailsData.SortedDetailsDataActivity"/>
         <activity
-            android:name=".ui.splashscreen.SplashScreenActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:name=".ui.screeningTool.ScreeningToolActivity"/>
+        <activity
+            android:name=".ui.splashscreen.SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -65,19 +58,16 @@
 
         <activity
             android:name=".ui.landing.MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:label="@string/app_name"/>
         <activity
-            android:name=".ui.preventionTips.PreventionTipsActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:name=".ui.preventionTips.PreventionTipsActivity" />
 
         <receiver android:name=".broadcastReceivers.WashHandsReminderBroadcast" />
         <receiver android:name=".broadcastReceivers.DrinkWaterReminderBroadcast" />
         <receiver android:name=".broadcastReceivers.GeofenceBroadcastReceiver" />
 
         <activity
-            android:name=".ui.regionalStats.RegionalStatsActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:name=".ui.regionalStats.RegionalStatsActivity" />
     </application>
 
 </manifest>
