--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 
     <application
         android:name=".Application"
@@ -65,6 +66,13 @@
         <receiver android:name=".broadcastReceivers.WashHandsReminderBroadcast" />
         <receiver android:name=".broadcastReceivers.DrinkWaterReminderBroadcast" />
         <receiver android:name=".broadcastReceivers.GeofenceBroadcastReceiver" />
+        <receiver
+            android:name=".broadcastReceivers.BootReceiver"
+            android:enabled="false">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
 
         <activity
             android:name=".ui.regionalStats.RegionalStatsActivity" />
